Add BUP FBS Mock Test section to index.html

--- a/index.html
+++ b/index.html
@@ -203,7 +203,20 @@
         <img src="https://scontent.fdac96-2.fna.fbcdn.net/v/t39.30808-6/572995002_1196499402529402_3143603662294315671_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=2285d6&_nc_eui2=AeGaBBE8Ty2VD8S7Lp5gFGBIavpLGDoFjLNq-ksYOgWMszLjQtvwHUg0HL0nEMScXRfs9nPVdJATKA4KmiaQbDu6&_nc_ohc=a_rQi7boL1YQ7kNvwE1ko3s&_nc_oc=AdkD_GcmeR3_vjDwAdJEfw1VKyjcoxTKZqKwBgyORIB17Qf3zSQ6QgUgnqX6gyIEkkHlXCx3wnFAMIqH9oFMvHvp&_nc_zt=23&_nc_ht=scontent.fdac96-2.fna&_nc_gid=JvdrLI5ajlnpe4LHQi-NAQ&oh=00_Afk8ZOU40M9mABh6vyxaa7zc2C5QVO1JXRZD84CSVIDZGg&oe=69355A19" 
              alt="Plan C Banner" 
              class="banner">
-
+  <!-- BUP Mock Test Section -->
+        <div class="thumbnail-section">
+            <h2 class="section-title">BUP FBS Mock Test - 01</h2>
+            <a href="bup-registration.html" class="thumbnail-link">
+                <img src="https://via.placeholder.com/300x200/1a2980/ffffff?text=BUP+FBS+Mock+Test" 
+                     alt="BUP FBS Mock Test" 
+                     class="thumbnail">
+            </a>
+            
+            <a href="bup-registration.html" class="see-results-btn" style="background: #1a2980;">
+                <i class="fas fa-pencil-alt"></i> Give BUP Exam
+            </a>
+        </div>
+        
         <!-- English Medium Mock Test Results -->
         <div class="thumbnail-section">
             <h2 class="section-title">DU C Unit English Medium Mock Test-01 Result 25-26</h2>
