Update banner image source in emmock.html

--- a/emmock.html
+++ b/emmock.html
@@ -672,7 +672,7 @@
         <!-- Header with Banner -->
         <div class="header">
             <a href="#" class="banner-link" target="_blank">
-            <img src="https://scontent.fdac96-2.fna.fbcdn.net/v/t39.30808-6/572995002_1196499402529402_3143603662294315671_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=2285d6&_nc_ohc=a_rQi7boL1YQ7kNvwGuQZMM&_nc_oc=AdnvrmrvbfaIH69GSV8UN71it75Nyy2msI-BJXlzAsxeHv6ji5CGc8adQAb7rQuToD4CPJo5LiDQ9297vsBEYADm&_nc_zt=23&_nc_ht=scontent.fdac96-2.fna&_nc_gid=qlhAB3aupwDDutx2pR0WTQ&oh=00_AfnqzacUIlHK6x09aMLyUc2OjrLXWm37JCuOLX-0LPQjuQ&oe=69378C99" alt="English Medium Mock Test Banner" class="banner">
+            <img src="https://scontent.fdac34-2.fna.fbcdn.net/v/t39.30808-6/596508598_122095313415161415_7059028306560406394_n.jpg?_nc_cat=109&cb2=99be929b-a592a72f&ccb=1-7&_nc_sid=cc71e4&_nc_eui2=AeHBFcY_v65nvfZ819ByFE2U58FVH4EHBInnwVUfgQcEia3lOuYcemLxT2eqQv6om8fDd4Fcw2GB8FSLZ_AJOczl&_nc_ohc=-6DoA92slvMQ7kNvwGOYiAG&_nc_oc=Adku2sNHEbWQx6sDZ-WRazcHBG8UV0fZu3mxoD0_55yD7DYOvGg2eDr_3oaVt6y62muzSmOSaVz1TqBiKCaLX5at&_nc_zt=23&_nc_ht=scontent.fdac34-2.fna&_nc_gid=vosymefoy6qd4TkUkr-t3A&oh=00_AfmZVt8ZIkqD9lUuwoqVY5jHbLsuhiPHzZSbtkHf63EzJA&oe=693E731C" alt="English Medium Mock Test Banner" class="banner">
             </a>
             <h1 class="main-title">English Medium Mock Test Results</h1>
             <p class="subtitle">Check your detailed performance and see where you stand among peers</p>
