--- a/bup-registration.html
+++ b/bup-registration.html
@@ -102,7 +102,7 @@
 
     <script>
         // YOUR GOOGLE APPS SCRIPT URL
-        const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbyFD7VlgyogVJum_WzJ4NW-UzT7vvK4Psp10s1m8sNbHAVqi_YQREqxRPHC58R-ahJR0w/exec';
+        const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbwpn0EyYk3SH_kR2L_fOKNekHOXad0E3DspuWSwMpxIS9guBDA3uPkoP0RIXpzRuZ68wA/exec';
 
         function validateForm() {
             let isValid = true;
@@ -157,11 +157,12 @@
                 phone: phone
             };
 
-            fetch(SCRIPT_URL, {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify(data)
-            })
+          fetch(SCRIPT_URL, {
+  method: 'POST',
+  mode: 'no-cors',  // ADD THIS LINE
+  headers: { 'Content-Type': 'application/json' },
+  body: JSON.stringify(data)
+})
             .then(response => response.json())
             .then(result => {
                 if (result.success) {
