--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
             </div>
 
             <div class="mentor-card">
-                <img src="tmx.png" 
+                <img src="tmx.jpg" 
                      onerror="this.onerror=null; this.src='C.png'; this.className='mentor-img fallback-img'; this.alt='Fallback Image: Tasin Mahmud Asha'; this.title='Image not loaded, using fallback'"
                      alt="Tasin Mahmud Asha" 
                      class="mentor-img">
