Update image source and fallback handling

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 <body>
     <div class="container">
         <!-- Banner with fallback -->
-        <img src="plan.jpg" 
+        <img src="planc.jpg" 
              onerror="this.onerror=null; this.src='C.png'; this.className='banner fallback-img'; this.alt='Fallback Banner'; this.title='Image not loaded, using fallback'"
              alt="Plan C Banner" 
              class="banner">
