Add BUP FBS Mock Test section to index.html
Added BUP FBS Mock Test section with links and images.

--- a/index.html
+++ b/index.html
@@ -244,7 +244,20 @@
                 <i class="fas fa-chart-bar"></i> See DU GC Results
             </a>
         </div>
-
+        <!-- BUP FBS Mock Test -->
+        <div class="thumbnail-section">
+            <h2 class="section-title">BUP FBS Mock Test</h2>
+            <a href="buptest/buptest1.html" class="thumbnail-link">
+                <img src="buptest.png" 
+                     onerror="this.onerror=null; this.src='C.png'; this.className='thumbnail fallback-img'; this.alt='Fallback Thumbnail'; this.title='Image not loaded, using fallback'"
+                     alt="BUP FBS Mock Test" 
+                     class="thumbnail">
+            </a>
+            
+            <a href="buptest/buptest1.html" class="see-results-btn" style="background: #e67e22; box-shadow: 0 4px 8px rgba(230, 126, 34, 0.3);">
+                <i class="fas fa-file-alt"></i> Take BUP FBS Mock Test
+            </a>
+        </div>
         <!-- Mentor Section -->
         <div class="mentor-section">
             <h2 class="mentor-title">Connect with Mentors</h2>
