--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 
         <!-- Footer -->
         <div class="footer">
-            <p>© 2025 Plan C DU C Group Change Mock Test Results</p>
+            <p>© Plan C by Mahdi Jahin and Tasin Mahmud </p>
         </div>
     </div>
 
