--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
         <div class="thumbnail-section">
             <h2 class="section-title">BUP FBS Mock Test</h2>
             <a href="buptest/buptest1.html" class="thumbnail-link">
-                <img src="buptest.png" 
+                <img src="bupmock.png" 
                      onerror="this.onerror=null; this.src='C.png'; this.className='thumbnail fallback-img'; this.alt='Fallback Thumbnail'; this.title='Image not loaded, using fallback'"
                      alt="BUP FBS Mock Test" 
                      class="thumbnail">
