Refactor BUP FBS Mock Test section in index.html

--- a/index.html
+++ b/index.html
@@ -224,20 +224,32 @@
              onerror="this.onerror=null; this.src='C.png'; this.className='banner fallback-img'; this.alt='Fallback Banner'; this.title='Image not loaded, using fallback'"
              alt="Plan C Banner" 
              class="banner">
-            <!-- BUP FBS Mock Test -->
-        <div class="thumbnail-section">
-            <h2 class="section-title">BUP FBS Mock Test</h2>
-            <a href="buptest/buptest1.html" class="thumbnail-link">
-                <img src="bupmock.png" 
-                     onerror="this.onerror=null; this.src='C.png'; this.className='thumbnail fallback-img'; this.alt='Fallback Thumbnail'; this.title='Image not loaded, using fallback'"
-                     alt="BUP FBS Mock Test" 
-                     class="thumbnail">
+           <!-- BUP FBS Mock Test -->
+<div class="thumbnail-section">
+    <h2 class="section-title">BUP FBS Mock Test</h2>
+    <a href="buptest/buptest1.html" class="thumbnail-link">
+        <img src="bupmock.png" 
+             onerror="this.onerror=null; this.src='C.png'; this.className='thumbnail fallback-img'; this.alt='Fallback Thumbnail'; this.title='Image not loaded, using fallback'"
+             alt="BUP FBS Mock Test" 
+             class="thumbnail">
+    </a>
+    <!-- BUP Mock Test -->
+    <div class="button-container">
+        <div class="button-row">
+            <a href="buptest/buptest1.html" class="see-results-btn" style="background: #e67e22;">
+                <i class="fas fa-file-alt"></i> Take Test
             </a>
             
-            <a href="buptest/buptest1.html" class="see-results-btn" style="background: #e67e22; box-shadow: 0 4px 8px rgba(230, 126, 34, 0.3);">
-                <i class="fas fa-file-alt"></i> Take BUP FBS Mock Test
+            <a href="buptest/bupresult01.html" class="see-results-btn" style="background: #27ae60;">
+                <i class="fas fa-chart-bar"></i> View Results
             </a>
         </div>
+        
+        <p style="text-align: center; color: #666; font-size: 14px; margin-top: 10px;">
+            Take the mock test or check your results from previous attempts
+        </p>
+    </div>
+</div>
                 <!-- JU IBA Mock Test -->
         <div class="thumbnail-section">
             <h2 class="section-title">JU IBA Mock Test by Plan C</h2>
