Remove redundant comment in index.html

--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
              alt="Plan C Banner" 
              class="banner">
            <!-- BUP FBS Mock Test -->
+<!-- BUP FBS Mock Test -->
 <div class="thumbnail-section">
     <h2 class="section-title">BUP FBS Mock Test</h2>
     <a href="buptest/buptest1.html" class="thumbnail-link">
@@ -233,7 +234,7 @@
              alt="BUP FBS Mock Test" 
              class="thumbnail">
     </a>
-    <!-- BUP Mock Test -->
+    
     <div class="button-container">
         <div class="button-row">
             <a href="buptest/buptest1.html" class="see-results-btn" style="background: #e67e22;">
