--- a/buptest/bupresult01.html
+++ b/buptest/bupresult01.html
@@ -578,18 +578,20 @@
 
         <div id="mainContent" style="display: none;">
             <!-- Branding Header -->
-            <div class="brand-header">
-                <div class="logo-container">
-                    <div class="logo">
-                        <!-- Add your C.png logo here -->
-                        <img src="https://via.placeholder.com/60/ff7e5f/ffffff?text=C" alt="Plan C Logo" id="logoImage">
-                    </div>
-                    <div class="brand-text">
-                        <div class="brand-name">Plan C Academy</div>
-                        <div class="brand-tagline">BUP Test Preparation Experts</div>
-                    </div>
-                </div>
+       <div class="brand-header">
+    <div class="logo-container">
+        <a href="https://www.facebook.com/plancbymj" target="_blank" style="display: flex; align-items: center; gap: 10px; text-decoration: none;">
+            <div class="logo">
+                <!-- Add your C.png logo here -->
+                <img src="C.png" alt="Plan C Logo" id="logoImage">
             </div>
+            <div class="brand-text">
+                <div class="brand-name">Plan C Academy</div>
+                <div class="brand-tagline">BUP Test Preparation Experts</div>
+            </div>
+        </a>
+    </div>
+</div>
 
             <!-- Header -->
             <div class="header">
