--- a/juiba.html
+++ b/juiba.html
@@ -325,7 +325,7 @@
                     <img src="C.png" alt="Plan C Logo" onerror="this.src='https://via.placeholder.com/60/4a6ee0/ffffff?text=C'">
                 </div>
                 <div class="logo">
-                    <img src="JU.png" alt="JU Logo" onerror="this.src='https://via.placeholder.com/60/6a11cb/ffffff?text=JU'">
+                    <img src="ju.webp" alt="JU Logo" onerror="this.src='https://via.placeholder.com/60/6a11cb/ffffff?text=JU'">
                 </div>
             </div>
             <h1 class="title">JU IBA Result Checker</h1>
